force-app/main/default/objects/Plant__c/fields/Credit_Representative__c.field-meta.xml
<CustomField>
    <fullName>Credit_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PlantCreditRepresentative</relationshipName>
    <type>Lookup</type>
</CustomField>