force-app/main/default/objects/Plant__c/fields/Customer_Service_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Number__c</fullName>
    <label>Customer Service Number</label>
    <type>Phone</type>
</CustomField>