force-app/main/default/objects/Plant__c/fields/Plant_Cenveo_Old_Ids__c.field-meta.xml
<CustomField>
    <fullName>Plant_Cenveo_Old_Ids__c</fullName>
    <label>Plant Cenveo Old Ids</label>
    <length>50</length>
    <type>Text</type>
</CustomField>