force-app/main/default/objects/Plant__c/fields/Plant_Code__c.field-meta.xml
<CustomField>
    <fullName>Plant_Code__c</fullName>
    <externalId>true</externalId>
    <label>Plant Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>