force-app/main/default/objects/Plant__c/fields/Plant_Controller__c.field-meta.xml
<CustomField>
    <fullName>Plant_Controller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant Controller</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PlantController</relationshipName>
    <type>Lookup</type>
</CustomField>