force-app/main/default/objects/Plant__c/fields/Plant_Divison__c.field-meta.xml
<CustomField>
    <fullName>Plant_Divison__c</fullName>
    <description>The Plant&apos;s primary producing division</description>
    <inlineHelpText>The Plant&apos;s primary producing division</inlineHelpText>
    <label>Plant Divison</label>
    <length>100</length>
    <type>Text</type>
</CustomField>