force-app/main/default/objects/Plant__c/fields/Plant_Manager__c.field-meta.xml
<CustomField>
    <fullName>Plant_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PlantManager</relationshipName>
    <type>Lookup</type>
</CustomField>