force-app/main/default/objects/Plant__c/fields/Postal__c.field-meta.xml
<CustomField>
    <fullName>Postal__c</fullName>
    <label>Postal</label>
    <length>10</length>
    <type>Text</type>
</CustomField>